# crumbvms

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CCLA.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.gpu.example.yml  docker-compose.override.example.yml  docker-compose.secrets.example.yml  docker-compose.smoke.yml  docker-compose.vaapi.example.yml  docker-compose.yml  rust-toolchain.toml
.githooks/: pre-commit
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  camera-report.yml  config.yml  feature_request.md
.github/workflows/: android-release.yml  ci.yml  cla.yml  docs.yml  leak-scan.yml  macos-release.yml  smoke.yml  windows-release-flutter.yml  windows-release.yml
apps/android/: .gitignore  README.md  build.gradle.kts  keystore.properties.example  settings.gradle.kts  version.properties
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/gradle/: libs.versions.toml
apps/desktop/: README.md  eslint.config.js  package.json
apps/desktop-flutter/: .gitignore  README.md  pubspec.yaml
apps/desktop-flutter/integration_test/: simple_test.dart
apps/desktop-flutter/lib/: main.dart  perf_grid.dart
apps/desktop-flutter/linux/: CMakeLists.txt
apps/desktop-flutter/rust/: Cargo.toml
apps/desktop-flutter/rust/src/: frb_generated.rs
apps/desktop-flutter/rust/src/api/: host.rs  mod.rs  secret.rs
apps/desktop-flutter/rust_builder/: pubspec.yaml
apps/desktop-flutter/test/: diagnostics_scrub_test.dart  ha_badge_scale_test.dart  plate_collapse_test.dart  plate_crop_aspect_test.dart
apps/desktop-flutter/web/: index.html  manifest.json
apps/desktop-flutter/windows/: CMakeLists.txt
apps/desktop/scripts/: README.md  cdp-eval.ps1  cdp-shot.ps1
apps/desktop/src/: app.js  index.html  styles.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  linux_panes.rs  main.rs  mpv.rs
apps/ios/: .gitignore  README.md  project.yml
caddy/: Caddyfile
data/: README.md  camera-compatibility.json
db/migrations/: 0001_initial_schema.sql  0002_views.sql  0003_record_audio.sql  0004_recorder_heartbeat.sql  0005_motion_grid.sql  0006_motion_grid_score.sql  0007_detection_events.sql  0008_segments_repair.sql  0009_segments_indexes.sql  0010_bookmarks.sql  0011_segments_storage_idx.sql  0012_server_settings_and_camera_ownership.sql  0013_segments_indexes.sql  0014_frigate_api_split.sql  0015_notifications.sql  0016_motion_baseline.sql  0017_notification_settings.sql  0018_consolidate_runtime_ensure_ddl.sql  0019_camera_effective_policy_view.sql  0020_grouped_cameras_clear_override.sql  0021_grouped_camera_no_override_trigger.sql  0022_clip_source.sql  0023_clip_views.sql  0024_clip_pre_roll.sql  0025_clip_motion_highlight.sql  0026_segment_motion_bbox.sql  0027_setup_complete.sql  0028_roles.sql  0029_bookmarks_enabled.sql  0030_view_owner.sql  0031_view_shares.sql  0032_system_alerts.sql  0033_sessions.sql  0034_frigate_heartbeat.sql  0035_decode_status.sql  0036_embedded_go2rtc_api_base.sql  0037_segment_motion_shadow.sql  0038_motion_detector_unhealthy_alert.sql  0039_motion_cache_status.sql  0040_motion_cache_unavailable_alert.sql  (+31 more)
docs/: AI-INSTALL.md  ALPHA-TESTER-TERMS.md  BACKUP.md  CLIENTS.md  COMPONENT-MAP.md  COMPOSE.md  DECISIONS.md  DETECTION-ICONS.md  IMAGES.md  IOS-APP-PLAN.md  IOS-LIVE-VIDEO.md  LPR-NATIVE-ENGINE-PLAN.md  MOBILE-PERFORMANCE.md  MOTION-ADAPTIVE-THRESHOLD.md  MOTION-DETECTION-DESIGN.md  MOTION-RECORDING.md  NEOLINK-ACTUATOR-PLAN.md  OPS-BACKUP-RECOVERY.md  OPS-DEPLOY.md  RECORDER-CORRECTNESS.md  RELEASE.md  REOLINK-ACTUATOR-PLAN.md  REOLINK-CONTROL-ARCH-DECISION.md  RESPONSIBLE-USE.md  ROADMAP.md  SCRUB-PREGEN-TUNABLES-PLAN.md  TLS.md  UPDATE-SYSTEM-PLAN.md  desktop-flutter-P1.md
docs-site/: .gitignore  Dockerfile  README.md  docker-compose.yml  docusaurus.config.js  nginx.conf  package-lock.json  package.json  sidebars.js
docs-site/docs/: responsible-use.md
docs/design/: POLICY-MODEL.md
go2rtc/: go2rtc.yaml
mosquitto/: mosquitto.conf
ops/backup/: crumb-db-backup.service  crumb-db-backup.timer  db-backup.sh
scripts/: backup-db.sh  enable-hwaccel.sh  gen-camera-compat.mjs  restore-db.sh  setup-env.sh  setup-secrets.sh  sync-arch-docs.mjs
scripts/release/: README.md  android.sh  backend.sh  desktop-linux.sh  desktop-windows.sh  ios.sh  lib.sh  pr-changelog.sh  release.sh
scripts/systemd/: crumb-db-backup.service  crumb-db-backup.timer
scripts/test/: fresh-install-smoke.sh  smoke-testsrc-go2rtc.yaml
services/alpr-worker/: Dockerfile  README.md  requirements.txt  worker.py
services/api/: Cargo.toml  Dockerfile
services/api/src/: admin.html  alerts.rs  auth.rs  auth_mw.rs  bookmarks.rs  camera_compat.rs  cameras.rs  channel_notify.rs  clips.rs  config.rs  config_routes.rs  db_backup.rs  detection_ingester.rs  diagnostics.rs  discover.rs  dto.rs  error.rs  events.rs  export.rs  export_store.rs  ffprobe.rs  filmstrip.rs  go2rtc.rs  ha.rs  main.rs  metrics.rs  notifications.rs  plates.rs  playback.rs  ptz.rs  rate_limit.rs  roles.rs  scrub_settings.rs  segment_low.rs  state.rs  stats.rs  status.rs  stream_test.rs  thumb_pregen.rs  timeline.rs  (+2 more)
services/api/src/detection/: frigate.rs  mod.rs
services/api/tests/: auth_rbac.rs  camera_device_info.rs  clip_overview_model.rs  lpr_ab.rs  lpr_plates.rs  notification_channel_rbac.rs  recording_policy_model.rs
services/api/tests/support/: mod.rs
services/common/: Cargo.toml
services/common/src/: config.rs  db.rs  detection.rs  ha.rs  icons.rs  lib.rs  logging.rs  lpr_ab.rs  redact.rs  types.rs
services/recorder/: Cargo.toml  Dockerfile  entrypoint.sh
services/recorder/src/: archive.rs  decode_probe.rs  frigate_motion.rs  go2rtc_embed.rs  ha_motion.rs  main.rs  motion.rs  reconcile.rs  recording.rs  resource_stats.rs  source_health.rs
(+393 files in other folders)
