[package]
name        = "crumb-common"
version     = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio            = { workspace = true }
tokio-postgres   = { workspace = true }
deadpool-postgres = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
uuid             = { workspace = true }
chrono           = { workspace = true }
chrono-tz        = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
async-trait      = { workspace = true }
reqwest          = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64           = "0.22"
