[package]
name = "rust_lib_crumb_desktop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"

# Perf-HUD host telemetry (ported from the Tauri desktop's `host_stats`): NVIDIA
# GPU/NVDEC via NVML, loaded at runtime through libloading — builds anywhere and
# gracefully returns None on a non-NVIDIA host.
nvml-wrapper = "0.10"

[target.'cfg(windows)'.dependencies]
# CPU-time + working-set memory of the client process (GetProcessTimes /
# GetProcessMemoryInfo). Same crate + feature set the Tauri desktop already uses.
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "minwindef", "handleapi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
